# eulero_suite_open

./: .gitignore  README.md  pyproject.toml  train.py
ar_spectra/: dataset.py  fma_metadata.py  metadata_providers.py
ar_spectra/interface/: aeiou.py
ar_spectra/models/: autoencoder.py  bottlenecks.py  discriminators.py  eulero_inference.py
ar_spectra/models/autoencoders/: SeaNET_AE.py  abstract_ae.py  autoencoder_dc.py.py  autoencoder_kl.py
ar_spectra/modules/: activations.py  attention.py  chalf_complex_linear.py  complex_activations.py  embedding.py  nets_utils.py  positionwise_feed_forward.py  subsampling.py  testing_modules.py
ar_spectra/modules/normed_modules/: conv.py  lstm.py  norm.py
ar_spectra/modules/streaming_utils/: chunk_utilis.py
ar_spectra/training_utils/: autoencoders.py  engine.py  get_model_config.py  initialization.py  jamendo_partition_manifest.json  pre_transform.py  reproducibility.py  utils.py
ar_spectra/training_utils/losses/: ar_spectra_losses.py  auraloss.py  metrics.py
conf/: config.yaml
conf/data/: data.yaml
conf/model/: SEANet_cplx_model.yaml  SEANet_real_model.yaml  hf_autoencoder_dc.yaml  hf_autoencoder_kl.yaml  simple_transformer_AE.yaml
conf/trainer/: trainer.yaml
docs/: metrics.md  model.md  trainer.md  training_dataset.md
test_metrics/: compute_all.sh  compute_cdpam.py  compute_fad.py  compute_spectral.py  generate_test_preds.py
tools/: regenerate_checkpoint.py
