[project]
name = "eulero-backbone"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "descript-audio-codec>=1.0.0",
    "einops>=0.8.1",
    "encodec>=0.1.1",
    "lightning>=2.5.6",
    "hydra-core>=1.3.2",
    "plotly>=6.4.0",
    "rich>=14.2.0",
    "safetensors>=0.6.2",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "torchvision==0.22.0",
    "tqdm>=4.66.5",
    "typeguard>=4.4.4",
    "wandb>=0.23.0",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "resampy>=0.4.3",
    "frechet-audio-distance>=0.1.2",
    "deepspeed>=0.18.2",
    "mutagen>=1.47.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
